Prueba de cambios

--- a/CuadrosMsj1.html
+++ b/CuadrosMsj1.html
@@ -19,6 +19,6 @@
 		</SCRIPT>
 		<P>Aquí va el resto de la página...</P>
 		<input type="button" name="boton1" onclick="mensajepregunta()" value ="Preguntar"></input>
-		<input type="button" name="boton2" onclick="alerta()" value="Exclamar"></input>
+		<input type="button" name="boton2" onclick="alerta()" value="Informar"></input>
 	</BODY>
 </HTML> 
