--- a/CuadrosMsj1.html
+++ b/CuadrosMsj1.html
@@ -14,7 +14,7 @@
 			}
 			
 			function alerta(){
-				alert("Esta es una alerta!!");
+				alert("Esta es una alerta!! Estos cambios no van a salir en master");
 			}
 		</SCRIPT>
 		<P>Aquí va el resto de la página...</P>
