--- a/CuadrosMsj1.html
+++ b/CuadrosMsj1.html
@@ -14,7 +14,7 @@
 			}
 			
 			function alerta(){
-				alert("Esta es una alerta!!");
+				alert("Esta es una alerta!! Este texto va a ser colocado en master. Revisar conflicto");
 			}
 		</SCRIPT>
 		<P>Aquí va el resto de la página...</P>
