--- a/CuadrosMsj1.html
+++ b/CuadrosMsj1.html
@@ -1,6 +1,6 @@
 <HTML>
 	<HEAD>
-		<TITLE>Ejemplo 2.2: p·gina que pide el nombre</TITLE>
+		<TITLE>Ejemplo 2.2: p√°gina que pide el nombre</TITLE>
 	</HEAD>
 	<BODY>
 		<SCRIPT LANGUAGE="JavaScript">
@@ -17,7 +17,7 @@
 				alert("Esta es una alerta!! Estos cambios si van a salir en master");
 			}
 		</SCRIPT>
-		<P>AquÌ va el resto de la p·gina...</P>
+		<P>Aqu√≠ va el resto de la p√°gina...</P>
 		<input type="button" name="boton1" onclick="mensajepregunta()" value ="Preguntar"></input>
 		<input type="button" name="boton2" onclick="alerta()" value="Informar"></input>
 	</BODY>
