Agregando fuentes externas

--- a/Pagina1.html
+++ b/Pagina1.html
@@ -6,6 +6,12 @@
 		<META CHARSET="utf-8"/>
 		<LINK HREF='favicon.ico' REL='shortcut icon' TYPE='image/x-icon'/>
 		<LINK HREF='favicon.ico' REL='icon' TYPE='image/x-icon'/>
+		<STYLE>
+			@font-face {
+				font-family: "Starcraft";
+				src: url("Starcraft.ttf");
+			}
+		</STYLE>
 	</HEAD>
 	<!--BODY BACKGROUND="Taj.jpg"-->
 	<!--BODY BGCOLOR="#00AFD5"-->
@@ -147,6 +153,7 @@
 		<P><FONT SIZE=6>Este texto tiene tamaño 6</FONT></P>
 		<P><FONT FACE="Bookman Old Style">Este texto viene con el formato de Bookman Old Style</FONT></P>
 		<P><FONT FACE="Comic Sans MS">Este texto viene con formato Comic Sans MS</FONT></P>
+		<P><FONT FACE="Starcraft">Este texto viene con el formato agregado Starcraft</FONT></P>
 		<HR>
 		<BR/>
 		<A NAME="Tablas"></A>
